// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Loading base demo works fine 1`] = `
<base>
  <wx-view
    class="loading-container-flex"
  >
    <t-loading
      size="40rpx"
      theme="circular"
    />
    <t-loading
      size="40rpx"
      tClassIndicator="indicator-black"
      theme="spinner"
    />
    <t-loading
      size="80rpx"
      tClassIndicator="indicator-black"
      theme="dots"
    />
  </wx-view>
</base>
`;

exports[`Loading Loading duration demo works fine 1`] = `
<duration>
  <t-loading
    duration="{{800}}"
    size="52rpx"
    tClassText="text-l"
    text="加载中..."
    theme="circular"
  />
  <wx-view
    class="slider-container"
  >
    <wx-view>
      速度调整
    </wx-view>
    <t-slider
      class="slider-class"
      label="{{true}}"
      max="{{2000}}"
      min="{{100}}"
      value="{{800}}"
      bind:change="durationChange"
    />
  </wx-view>
</duration>
`;

exports[`Loading Loading error demo works fine 1`] = `
<error>
  <t-loading
    theme="error"
    bind:reload="reloadPage"
  />
</error>
`;

exports[`Loading Loading horizontal demo works fine 1`] = `
<horizontal>
  <wx-view
    class="loading-container-flex"
  >
    <t-loading
      size="40rpx"
      text="加载中..."
      theme="circular"
    />
    <t-loading
      size="40rpx"
      tClassIndicator="indicator-black"
      text="加载中..."
      theme="spinner"
    />
    <t-loading
      size="40rpx"
      theme="circular"
    >
      <span
        slot="text"
        style="color: #0052d9"
      >
        加载中...
      </span>
    </t-loading>
  </wx-view>
</horizontal>
`;

exports[`Loading Loading loadingProgress demo works fine 1`] = `
<loadingProgress>
  <t-loading
    loading="{{false}}"
    progress="{{100}}"
    theme="bar"
  />
</loadingProgress>
`;

exports[`Loading Loading size demo works fine 1`] = `
<size>
  <wx-view
    class="loading-container-flex-column"
  >
    <t-loading
      size="40rpx"
      text="加载中(小)..."
      theme="circular"
    />
    <t-loading
      size="48rpx"
      tClassText="text-m"
      text="加载(中)..."
      theme="circular"
    />
    <t-loading
      size="52rpx"
      tClassText="text-l"
      text="加载中(大)..."
      theme="circular"
    />
  </wx-view>
</size>
`;

exports[`Loading Loading status demo works fine 1`] = `
<status>
  <wx-view
    class="loading-container-flex"
  >
    <t-switch
      colors="{{
        Array [
          "#00A870",
        ]
      }}"
      slot="note"
      value="{{false}}"
      bind:change="switchChange"
    />
    <span
      class="text-info"
    >
       请求结束，隐藏loading加载 
    </span>
  </wx-view>
  <t-loading
    delay="{{1000}}"
    loading="{{false}}"
    size="40rpx"
    text="加载中..."
    theme="circular"
  />
</status>
`;

exports[`Loading Loading text demo works fine 1`] = `
<wx-text>
  <t-loading
    indicator="{{false}}"
    text="加载中..."
  />
</wx-text>
`;

exports[`Loading Loading vertical demo works fine 1`] = `
<vertical>
  <t-loading
    layout="vertical"
    size="40rpx"
    text="加载中"
    theme="circular"
  />
</vertical>
`;
